Fixed bio so it lays more nicely when peeps have lots of words (on mobile)

--- a/app/assets/stylesheets/user.css.sass
+++ b/app/assets/stylesheets/user.css.sass
@@ -33,7 +33,8 @@ h2
   .bio
     font-size: .9rem
     font-style: italic
-    padding-top: 10px
+    margin-top: 0
+    +span-columns(6)
 
 .badges
   +clearfix
